--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
             "email": "marciojsb@hotmail.com"
         }
     ],
-    "require": {},
+    "require": {
+        "pimple/pimple": "^3.2"
+    },
     "autoload": {
         "psr-4": {
             "gerenciador\\": "src",
