--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "pimple/pimple": "^3.2",
         "illuminate/support": "^5.6",
         "symfony/http-foundation": "^4.1",
-        "zendframework/zend-eventmanager": "^3.2"
+        "zendframework/zend-eventmanager": "^3.2",
+        "firebase/php-jwt": "^5.0"
     },
     "autoload": {
         "psr-4": {
