--- a/front/package.json
+++ b/front/package.json
@@ -5,18 +5,19 @@
   "author": "Marcio Borges <marciojsb@hotmail.com>",
   "private": true,
   "scripts": {
-    "dev": "webpack --watch --config build/webpack.dev.conf.js",
+    "dev": "webpack --watch --config build/webpack.dev.conf.js", 
     "start": "npm run dev",
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@types/qs": "^6.5.1",
+    "@types/underscore": "^1.8.9",
     "axios": "^0.18.0",
     "material-design-icons-iconfont": "^3.0.3",
-    "npm": "^6.3.0",
     "underscore": "^1.9.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vuetify": "^1.1.11",
+    "vuetify": "^1.1.13",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -44,9 +45,9 @@
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
-    "semver": "^5.3.0",
+    "semver": "^5.5.1",
     "shelljs": "^0.7.6",
-    "uglifyjs-webpack-plugin": "^1.1.1",
+    "uglifyjs-webpack-plugin": "^1.3.0",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
