--- a/front/package.json
+++ b/front/package.json
@@ -5,7 +5,7 @@
   "author": "Marcio Borges <marciojsb@hotmail.com>",
   "private": true,
   "scripts": {
-    "dev": "webpack --watch --config build/webpack.dev.conf.js", 
+    "dev": "webpack --watch --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "build": "node build/build.js"
   },
@@ -14,6 +14,7 @@
     "@types/underscore": "^1.8.9",
     "axios": "^0.18.0",
     "material-design-icons-iconfont": "^3.0.3",
+    "npm": "^6.4.0",
     "underscore": "^1.9.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
